force-app/main/default/objects/Dedupe_Detail__c/Dedupe_Detail__c.object-meta.xml
<CustomObject>
    <label>Dedupe Detail</label>
    <nameField>
        <displayFormat>DD-{0000}</displayFormat>
        <label>Dedupe Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dedupe Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>