force-app/main/default/objects/Dedupe_Detail__c/fields/Applicant_Id__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Id__c</fullName>
    <label>Applicant Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>