force-app/main/default/objects/Dedupe_Detail__c/fields/Button_Name__c.field-meta.xml
<CustomField>
    <fullName>Button_Name__c</fullName>
    <label>Button Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check Dedupe</fullName>
            </value>
            <value>
                <fullName>Re-trigger Dedupe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>