force-app/main/default/objects/Dedupe_Detail__c/fields/CIF_Id__c.field-meta.xml
<CustomField>
    <fullName>CIF_Id__c</fullName>
    <label>CIF Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>