force-app/main/default/objects/Dedupe_Detail__c/fields/Customer_Rel_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Rel_Id__c</fullName>
    <label>Customer Rel Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>