force-app/main/default/objects/Dedupe_Detail__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <label>Date Of Birth</label>
    <length>40</length>
    <type>Text</type>
</CustomField>