force-app/main/default/objects/Dedupe_Detail__c/fields/Dedupe_Invoke_From__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Invoke_From__c</fullName>
    <label>Dedupe Invoke From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Login</fullName>
            </value>
            <value>
                <fullName>Lead Details</fullName>
            </value>
            <value>
                <fullName>Pc</fullName>
            </value>
            <value>
                <fullName>Ac</fullName>
            </value>
            <value>
                <fullName>Check Dedupe</fullName>
            </value>
            <value>
                <fullName>Re-Trigger Dedupe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>