force-app/main/default/objects/Dedupe_Detail__c/fields/Driving_License__c.field-meta.xml
<CustomField>
    <fullName>Driving_License__c</fullName>
    <label>Driving License</label>
    <length>50</length>
    <type>Text</type>
</CustomField>