force-app/main/default/objects/Dedupe_Detail__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <label>Mobile Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>