force-app/main/default/objects/Dedupe_Detail__c/fields/Pan_Number__c.field-meta.xml
<CustomField>
    <fullName>Pan_Number__c</fullName>
    <label>Pan Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>