force-app/main/default/objects/Dedupe_Detail__c/fields/Voter_Id__c.field-meta.xml
<CustomField>
    <fullName>Voter_Id__c</fullName>
    <label>Voter Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>